@@ -131,6 +131,8 @@ def join_mu(joint_fstring: str, mstr: str, ustr: str) -> str:
 
     This avoids that `3 and `1 / m` becomes `3 1 / m`
     """
+    if ustr == "":
+        return mstr
     if ustr.startswith("1 / "):
         return joint_fstring.format(mstr, ustr[2:])
     return joint_fstring.format(mstr, ustr)
